<resources>
    <string name="app_name">Highlights</string>
    <string name="genre">Genre</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="poster_url">Poster URL</string>
    <string name="save">Save</string>
    <string name="author">Author</string>
    <string name="url_is_not_valid">Url is not valid</string>
    <string name="country">Country</string>
    <string name="sure_to_delete">Are you sure to delete?</string>
    <string name="yes">Yes</string>
    <string name="title_app_needs_permission">Permission needed</string>
    <string name="backup_permission_explanation">App needs permission to store backup</string>
    <string name="restore_permission_explanation">App needs permission to restore backup</string>
    <string name="title_edit">edit</string>
    <string name="delete">delete</string>
    <string name="internet_search">Internet Search</string>
    <string name="countries_placeholder">"Countries: %s"</string>
    <string name="years_placeholder">"Year: %d"</string>
    <string name="move_to">Move to…</string>
    <string name="error_fetching_local_data">Error fetching local data</string>
    <string name="empty_list_message">You don\'t have any %s added</string>
    <string name="clear_image_cache">Clear image cache</string>
    <string name="title_enable_suggestions">Enable suggestions</string>
    <string name="image_cache_cleared">Image cache cleared</string>
    <string name="share_with">Share with</string>
    <string name="filter">Filter</string>
</resources>
