<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:padding="20dp">

    <dev.liinahamari.suggestions_ui.book.SearchBookAutoCompleteTextView
        android:id="@+id/titleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/name"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <requestFocus />
    </dev.liinahamari.suggestions_ui.book.SearchBookAutoCompleteTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authorEtContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/author"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authorEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/year"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/yearEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/posterUrlInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/poster_url"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <dev.liinahamari.list_ui.custom_views.UrlValidatingEditText
            android:id="@+id/posterUrlEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/countrySelectionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:text="@string/country"
        app:cornerRadius="3dp" />

    <Button
        android:id="@+id/genreBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/genre"
        app:cornerRadius="3dp" />

</LinearLayout>
